# block

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  WSL_SETUP.md  blockassist.dockerfile  daemon.py  launcher.py  modal_server.sh  pyproject.toml  run.py  run_http_server.py  run_launch.sh  setup.sh
.buildkite/: pipeline.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_wheels.yml
data/base_checkpoint/: algorithm_state.pkl  rllib_checkpoint.json
data/craftassist/houses/test/diamond_fortress/: placed.json  stats.json
data/craftassist/houses/test/emerald_maze/: placed.json  stats.json
data/craftassist/houses/test/obsidian_tower/: placed.json  stats.json
data/craftassist/houses/test/workdir.2018-08-18-01:46:43.ip-172-31-12-95/: placed.json  stats.json
data/craftassist/houses/train/workdir.2018-08-10-20:57:24.ip-172-31-0-48/: placed.json  stats.json
modal-login/: .env  .gitignore
modal-login/app/api/submit-hf-upload/: route.ts
modal-login/app/lib/: HttpRequestError.ts  contract.json  userOperationHandler.ts
modal-login/perm-data/: userApiKey.json  userData.json
modal-login/temp-data/: userApiKey.json  userData.json
private/: README.md
scripts/: gradle_setup.sh  node_env.sh  run_blockassist.sh  run_malmo.sh  tmux_tail.sh  train_blockassist.sh  venv_setup.sh  wsl_graphics_setup.sh  yarn_run.sh  yarn_setup.sh
src/blockassist/: config.yaml  context.py  data.py  episode.py  globals.py  launch.py  mbag.py  telemetry.py  train.py
src/blockassist/blockchain/: coordinator.py  names.py
src/blockassist/contracts/: blockassist_v1.json
src/blockassist/distributed/: hf.py  s3.py
src/blockassist/goals/: __init__.py  craftassist_block_map.json  diamond_quest.py  emerald_quest.py  generator.py  grabcraft_block_map.json  limited_block_map.json  obsidian_quest.py
src/blockassist/merging/: bagging.py
src/mbagd/: context.py  launch.py  log.py  log_util.py  telemetry.py
src/mbagd/distributed/: hf.py  s3.py
tests/: test_bagging.py  test_data.py  test_episode.py  test_telemetry.py  test_train.py
