[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools_scm]

[project]
name = "mbag-d"
dynamic = ["version"]
description = "Distributed experiments built using the MBAG multiagent environment (https://github.com/cassidylaidlaw/minecraft-building-assistance-game)."
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
  "aiofiles",
  "datasets",
  "eth-account",
  "hydra-core",
  "numpy",
  "requests",
  "six",
  "tensorboard",
  "torch",
  "opencv-python",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "pydantic",
  "transformers==4.51.3",
  "requests",
  "wandb",
  "web3",
]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]
